test/suite/samples/snippet_allowlist/deny_forbidden_server_snippet/case.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-0
  namespace: ns-0
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-snippet: "load_module"
    nginx.ingress.kubernetes.io/configuration-snippet: "load_module"
    nginx.ingress.kubernetes.io/server-snippet: "load_module"
    nginx.ingress.kubernetes.io/modsecurity-snippet: "load_module"
    cloud-platform.justice.gov.uk/ignore-external-dns-weight: "true"
spec:
  rules:
    - host: ing-0.example.com
      http:
        paths:
        - backend:
            service:
              name: helloworld
              port:
                name: http
          pathType: ImplementationSpecific
